fix: mobile overflow and update documentation

--- a/components/countriesStyle.css
+++ b/components/countriesStyle.css
@@ -80,7 +80,7 @@ body {
         margin: 0;
     }
     .place {
-        width: 100%;
+        width: 90%;
     }
     .place img {
         height: 300px;
